@@ -1,11 +1,12 @@
 package com.dev.servlet.core.util;
+
 import com.dev.servlet.domain.transfer.records.KeyPair;
 import com.dev.servlet.domain.transfer.records.Query;
 import com.dev.servlet.domain.transfer.records.Sort;
 import com.dev.servlet.infrastructure.persistence.IPageRequest;
 import com.dev.servlet.infrastructure.persistence.internal.PageRequest;
 import lombok.NoArgsConstructor;
-import org.apache.commons.lang3.RandomStringUtils;
+
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.net.URLDecoder;
@@ -15,6 +16,9 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 /**
  * Comprehensive HTTP request URI processing utility for parameter extraction and query handling.
@@ -125,19 +129,15 @@ public final class URIUtils {
      * @param request the HTTP request to parse
      * @return Query object with pagination, search term, and type filter
      */
-    public static Query getQuery(HttpServletRequest request) {
-        String type = null;
-        String search = null;
-        IPageRequest<?> pageRequest = null;
+    public static IPageRequest getPageRequest(HttpServletRequest request) {
+        IPageRequest pageRequest;
         if (hasQueryString(request)) {
-            Map<String, String> queryParams = extractQueryParameters(request);
+            Map<String, String> queryParams = filterQueryParameters(request);
             pageRequest = createPageRequest(queryParams);
-            search = getParam(queryParams, "q");
-            type = getParam(queryParams, "k");
         } else {
             pageRequest = buildPagination();
         }
-        return new Query(pageRequest, search, type);
+        return pageRequest;
     }
 
     /**
@@ -157,11 +157,11 @@ public final class URIUtils {
      * @param request the HTTP request containing query parameters
      * @return map of parameter names to URL-decoded values
      */
-    private static Map<String, String> extractQueryParameters(HttpServletRequest request) {
+    private static Map<String, String> filterQueryParameters(HttpServletRequest request) {
         Map<String, String> queryParams = new HashMap<>();
         List<KeyPair> params = parseQueryParams(request.getQueryString());
         for (var param : params) {
-            queryParams.put(param.getKey(), ((String) param.value()).trim());
+            queryParams.put(param.getKey(), URLDecoder.decode(((String) param.value()).trim(), StandardCharsets.UTF_8));
         }
         return queryParams;
     }
@@ -172,15 +172,11 @@ public final class URIUtils {
      * @param queryParams map of query parameters
      * @return configured PageRequest with pagination and sorting
      */
-    private static IPageRequest<?> createPageRequest(Map<String, String> queryParams) {
+    private static IPageRequest createPageRequest(Map<String, String> queryParams) {
         int pageInitial = parsePageNumber(queryParams);
         int pageSize = parsePageSize(queryParams);
         Sort sort = createSort(queryParams);
-        return PageRequest.builder()
-                .initialPage(pageInitial)
-                .pageSize(pageSize)
-                .sort(sort)
-                .build();
+        return PageRequest.builder().initialPage(pageInitial).pageSize(pageSize).sort(sort).build();
     }
 
     /**
@@ -252,17 +248,13 @@ public final class URIUtils {
      * 
      * @return PageRequest with property-based default values
      */
-    private static PageRequest<Object> buildPagination() {
+    private static PageRequest buildPagination() {
         int page = PropertiesUtil.getProperty("pagination.page", DEFAULT_INITIAL_PAGE);
         int size = PropertiesUtil.getProperty("pagination.limit", DEFAULT_MIN_PAGE_SIZE);
         String field = PropertiesUtil.getProperty("pagination.sort", DEFAULT_SORT_FIELD);
         String order = PropertiesUtil.getProperty("pagination.order", DEFAULT_SORT_ORDER);
         Sort sort = Sort.by(field).direction(Sort.Direction.from(order));
-        return PageRequest.builder()
-                .initialPage(page)
-                .pageSize(size)
-                .sort(sort)
-                .build();
+        return PageRequest.builder().initialPage(page).pageSize(size).sort(sort).build();
     }
 
     /**
@@ -276,7 +268,7 @@ public final class URIUtils {
         return httpServletRequest.getParameterMap()
                 .entrySet().stream()
                 .map(e -> new KeyPair(e.getKey(), e.getValue()[0]))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -301,15 +293,16 @@ public final class URIUtils {
         };
     }
 
-    /**
-     * Retrieves and URL-decodes a specific query parameter.
-     * 
-     * @param queryParams map of query parameters
-     * @param q the parameter name to retrieve
-     * @return URL-decoded parameter value, or null if not found
-     */
-    private static String getParam(Map<String, String> queryParams, String q) {
-        String paramValue = queryParams.get(q);
-        return paramValue != null ? URLDecoder.decode(paramValue, StandardCharsets.UTF_8) : null;
+    public static Query query(HttpServletRequest servletRequest) {
+        if (!hasQueryString(servletRequest)) return null;
+        Map<String, String> queries = filterQueryParameters(servletRequest);
+
+        String field = queries.remove("k");
+        String value = queries.remove("q");
+        if (field != null && value != null) {
+            queries.put(field, value);
+        }
+
+        return new Query(queries);
     }
 }
